--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -63,7 +63,7 @@
 				\end{itemize}
 
 	
-\section{UML diagrams - Σενάρια χρήσης}
+\section{Σενάρια χρήσης}
 
 	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
 	Η ενοποιημένη Γλώσσα Μοντελοποίησης (UML) είναι μια τυπική γλώσσα για τη σύνταξη λεπτομερών σχεδίων λογισμικού. Η UML μπορεί να χρησιμοποιηθεί για να απεικονίσει, να προσδιορίζει,να κατασκευάσει και να τεκμηριώσει τα προϊόντα του συστήματος εντάσεως λογισμικού.\cite{Booch2005}. Δεν αποτελεί απλώς έναν κατάλογο από διαγράμματα, αλλά είναι μια γλώσσα αναπαράστασης γνώσης. Αυτό συνεπάγεται ότι κάθε στοιχείο διαγράμματος, π.χ. κουτί, βέλος, κύκλος, ορθογώνιο κ.λ.π., υποστηρίζεται από συγκεκριμένους κανόνες σύνταξης και σημασιολογία.
@@ -86,19 +86,8 @@
 	\end{itemize}
 	
 Κάθε ένα από τα παραπάνω διαγράμματα βλέπει το σύστημα από μια διαφορετική οπτική γωνία, π.χ. τα διαγράμματα χρήσης δείχνουν πώς οι χρήστες αλληλεπιδρούν με το σύστημα, τα διαγράμματα κλάσης δείχνουν τις κλάσεις του συστήματος και τις σχέσεις μεταξύ τους κλπ.
-
-	Στο πλαίσιο της διπλωματικής μας, θα χρησιμοποιήσουμε διαγράμματα χρήσης (use cases diagrams). Τα διαγράμματα χρήσης είναι τα διαγράμματα υψηλότερου επιπέδου της UML και αποτυπώνουν την συμπεριφορά του συστήματος από την σκοπιά ενός εξωτερικού χρήστη. Περιγράφονται όλες οι λειτουργίες του συστήματος σε έναν γραφικό πίνακα περιεχομένων (τι πρέπει να κάνει το σύστημα και όχι το πως θα το κάνει).  Τα διαγράμματα χρήσης έχουν τέσσερα βασικά συστατικά:
 	
-	\begin{itemize}
-		\item Τους δράστες, που είναι χρήστες, ένας οργανισμός, εξωτερικά συστήματα κλπ..Κάθε δράστης συνδέεται με αρκετά σενάρια χρήσης καθένα από τα οποία περιγράφει τι θέλει να κάνει ο δράστης με το σύστημα.
-		\item Τα σενάρια χρήσης ( τα οποία αναπαρίστανται με οβάλ σχήματα και το όνομα των σεναρίων ),  τα οποία περιγράφουν μία σειρά από πράξεις που πρέπει να εκτελεστούν για να επιτευχθεί ή να εγκαταλειφθεί ο στόχος του δράστη.
-		\item Τις γραμμές που αντιπροσωπεύουν διάφορους τύπους σχέσεων (πχ isa, περιλαμβάνει, επεκτείνει κλπ) μεταξύ ενός δράστη και ενός σεναρίου χρήσης, μεταξύ δύο σεναρίων χρήσης και μεταξύ δύο δραστών. 
-		\item Τα όρια του συστήματος που αντιπροσωπεύεται από ένα τετράγωνο που περιλαμβάνει όλα τα σενάρια χρήσης που υποδεικνύουν τις λειτουργικότητες του συστήματος. 
-
-	\end{itemize}
-	
-
-Η πρακτική της ανάλυσης με σενάρια χρήσης τυποποιήθηκε για πρώτη φορά από τον Jacobson το 1994, ο οποίος περιέγραψε το σενάριο χρήσης σαν "μία σειρά από συναλλαγές που σχετίζονται ως προς την συμπεριφορά και εκτελούνται από έναν δράστη που βρίσκεται σε επικοινωνία με το σύστημα με σκοπό την παροχή κάποιας μετρήσιμης αξίας στον δράστη" \cite{Jacobson} . Ένα σενάριο χρήσης είναι μία συλλογή από πιθανά σενάρια μεταξύ του συστήματος και των εξωτερικών του δραστών. Κάθε σενάριο χρήσης χαρακτηρίζεται από τον στόχο που έχει ο κύριος δράστης του. Ο στόχος αυτός μπορεί να επιτευχθεί ή όχι. Τα σενάρια χρήσης αποτελούν ένα πολύ διαδεδομένο και πολύτιμο εργαλείο για την πλήρη αποτύπωση των λειτουργικών απαιτήσεων του συστήματος. Οι λειτουργικές απαιτήσεις μπορούν να εκφραστούν είτε με μορφή κειμένου, είτε με μορφή πίνακα. Επιλέξαμε να χρησιμοποιήσουμε την μορφή πίνακα, καθώς έχει πιο αυστηρή δομή με αποτέλεσμα να μειώνονται οι ασυνέπειες και οι περιττές πληροφορίες. \cite{Cockburn2000} και πιο συγκεκριμένα την μονή στήλη πρότυπο \cite{Cockburn2000} :
+		Η πρακτική της ανάλυσης με σενάρια χρήσης τυποποιήθηκε για πρώτη φορά από τον Jacobson το 1994, ο οποίος περιέγραψε το σενάριο χρήσης σαν "μία σειρά από συναλλαγές που σχετίζονται ως προς την συμπεριφορά και εκτελούνται από έναν δράστη που βρίσκεται σε επικοινωνία με το σύστημα με σκοπό την παροχή κάποιας μετρήσιμης αξίας στον δράστη" \cite{Jacobson} . Ένα σενάριο χρήσης είναι μία συλλογή από πιθανά σενάρια μεταξύ του συστήματος και των εξωτερικών του δραστών. Κάθε σενάριο χρήσης χαρακτηρίζεται από τον στόχο που έχει ο κύριος δράστης του. Ο στόχος αυτός μπορεί να επιτευχθεί ή όχι. Τα σενάρια χρήσης αποτελούν ένα πολύ διαδεδομένο και πολύτιμο εργαλείο για την πλήρη αποτύπωση των λειτουργικών απαιτήσεων του συστήματος. Οι λειτουργικές απαιτήσεις μπορούν να εκφραστούν είτε με μορφή κειμένου, είτε με μορφή πίνακα. Επιλέξαμε να χρησιμοποιήσουμε την μορφή πίνακα, καθώς έχει πιο αυστηρή δομή με αποτέλεσμα να μειώνονται οι ασυνέπειες και οι περιττές πληροφορίες. \cite{Cockburn2000} και πιο συγκεκριμένα την μονή στήλη πρότυπο \cite{Cockburn2000} :
  
  
 \begin{table}[H]
@@ -1131,7 +1120,65 @@
 	\end{center}
 \end{table}
 
+\section{UML Diagrams - Activity Diagrams}
 
+		Τα διαγράμματα δραστηριότητας χρησιμοποιούνται για να μοντελοποιήσουν ένα σενάριο χρήσης με μεγάλη λεπτομέρεια. Κάθε διάγραμμα δραστηριότητας αρχίζει με ένα μαύρο κύκλο και σταματά στη (σε τουλάχιστον ένα) ομόκεντρο ασπρόμαυρο κύκλο. Οι δράσεις συμβολίζονται με εκλείψεις. Όταν μια δράση αναλύεται σε επιμέρους δράσεις, χρησιμοποιούνται κουτιά με στρογγυλεμένες άκρες. Από κάθε δράση βγαίνει ένα βέλος, που ονομάζεται μετάβαση, και πραγματοποιεί την σύνδεση με την επόμενη. Το βέλος μπορεί επίσης να οδηγήσει σε ένα διαμάντι, το οποίο υποδεικνύει διακλάδωση σε δύο ή περισσότερες αλληλοαναιρούμενες μεταβάσεις. Οι εκφράσεις που βρίσκονται μέσα σε αγκύλες [], π.χ. [υπάρχει όνομα χρήστη] ή [δεν υπάρχει όνομα χρήστη], επισημαίνουν τις μεταβάσεις που προέρχονται από ένα κλαδί. Επίσης, μία μετάβαση μπορεί να διακλαδωθεί σε δύο ή περισσότερες παράλληλες δραστηριότητες (fork activities). Όταν και οι δύο δραστηριότητες έχουν ολοκληρωθεί ενώνονται και  η ροή συνεχίζεται. Κάθε διακλάδωση (fork) πρέπει να είναι ακολουθείται από μία ένωση (join). Οι διακλαδώσεις(forks) και οι ενώσεις(joins) εμφανίζονται στο διάγραμμα δραστηριότης σαν μπάρες.
+
+		Στην συνέχεια ακολουθούν κάποια ακολουθιακά διαγράμματα:
+		
+		
+		\begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{Register.png}
+		    \caption{Ακολουθιακό διάγραμμα \#1. Εγγραφή εθελοντή αιμοδότη στο σύστημα.}
+		    \label{fig:register}
+		\end{figure}
+		
+		
+		\begin{figure}[H]
+		    \centering
+		    \includegraphics[width=1\textwidth]{Login.png}
+		    \caption{Ακολουθιακό διάγραμμα \#2. Είσοδος εθελοντή αιμοδότη στο σύστημα.}
+		    \label{fig:login}
+		\end{figure}
+		
+		\begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{ViewDonationEvents.png}
+		    \caption{Ακολουθιακό διάγραμμα \#3. Προβολή γεγονότων αιμοδοσίας, από τον εθελοντή αιμοδότη.}
+		    \label{fig:view}
+		\end{figure}
+		
+	    \begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.9\textwidth]{ManageNotifications.png}
+		    \caption{Ακολουθιακό διάγραμμα \#4. Διαχείριση των ειδοποιήσεων για τα γεγονότα αιμοδοσίας από τον εθελοντή αιμοδότη.}
+		    \label{fig:manage}
+		\end{figure}
+
+		
+		\begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.5\textwidth]{CreateReservation.png}
+		    \caption{Ακολουθιακό διάγραμμα \#5. Κλείσιμο ραντεβού για αιμοδοσία από τον εθελοντή αιμοδότη.}
+		    \label{fig:createAppoint}
+		\end{figure}
+		
+				
+		\begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.7\textwidth]{CompleteDonation.png}
+		    \caption{Ακολουθιακό διάγραμμα \#6. Καταχώρηση αιμοδοσίας από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας σύστημα.}
+		    \label{fig:complete}
+		\end{figure}
+		
+	    \begin{figure}[H]
+		    \centering
+		    \includegraphics[width=0.55\textwidth]{EligibilityTest.png}
+		    \caption{Ακολουθιακό διάγραμμα \#7. Έλεγχος καταλληλότητας του υποψήφιου αιμοδότη από τον  εγκεκριμένο χρήστη/διαχειριστή του συστήματος αιμοδοσίας.}
+		    \label{fig:eligibiity}
+		\end{figure}
+		
 \section{Business Model}
 	\subsection{Gamification}
 	
