Interoperability - Current situation in Greece, Percentage of temporal rejection of volunteers

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -141,7 +141,7 @@
 για την τήρηση και φύλαξη των ιατρικών φακέλων των ασθενών.
 Στον ηλεκτρονικό ιατρικό φάκελο δίνεται ιδιαίτερη έμφαση στην προστασία των
 προσωπικών δεδομένων τα οποία αρχειοθετούνται. Φυσικά λόγω της ευαισθησίας των
-προσωπικών στοιχείων, πληρούνται όλες εκείνες οι προυποθέσεις ασφαλείας που εξασφαλίζουν
+προσωπικών στοιχείων, πληρούνται όλες εκείνες οι προϋποθέσεις ασφαλείας που εξασφαλίζουν
 το αδιάβλητο των δεδομένων. 
 
 
@@ -151,14 +151,54 @@
 	
 		Η ανάγκη διασύνδεσης των συστημάτων υγείας και των πολιτικών που ακολουθούνται σε κάθε κράτος σχετικά με την υγεία στην Ευρωπαϊκή Ένωση, γίνεται όλο και πιο πιεστική, λόγω της αυξημένης κινητικότητας των ασθενών και των επαγγελματιών του ιατρικού τομέα και της διάδοσης των νέων ιατρικών τεχνολογιών και τεχνικών που αφορούν την τεχνολογία της πληροφορίας. Η διασύνδεση των διάφορων συστημάτων υγείας είναι απαραίτητη για την καλύτερη ποιότητα αλλά και την άμεση πρόσβαση των πολιτών στη διασυνοριακή περίθαλψη.  Πολλά κράτη μέλη της Ευρωπαϊκής Ένωσης έχουν αναπτύξει ηλεκτρονικά συστήματα σχετικά με τα αρχεία των ασθενών. Ο ηλεκτρονικός ιατρικός φάκελος του ασθενούς και η ηλεκτρονική συνταγογράφηση είναι δύο πολύ σημαντικά συστήματα τα οποία προάγουν την ασφαλή και αξιόπιστη ιατροφαρμακευτική περίθαλψη.	 	
 	 	
-	 	Η Ευρωπαϊκή Ένωση στα πλαίσια του στόχου της επικοινωνίας και της συνεργασίας των χωρών που εντάσσονται σε αυτή και την ύπαρξη κοινών οδηγιών στον τομέα της υγείας, τον Ιούλιο του 2008 σε συνεργασία με τους δημόσιους φορείς που έχουν αρμοδιότητα τις ηλεκτρονικές υπηρεσίες υγείας (ηλεκτρονικός ιατρικός φάκελος, ηλεκτρονικής συνταγογράφησης) ξεκίνησε ένα σημαντικό έργο, τον ευρωπαϊκό πιλότο epSOS (Έξυπνες Ανοιχτές Ηλεκτρονικές Υπηρεσίες για τους Ευρωπαίους Ασθενείς). Ο κύριος στόχος του epSOS είναι η ανάπτυξη ενός πρακτικού πλαισίου ηλεκτρονικής υγείας και κατάλληλων  υποδομών  στον τομέα της  Πληροφορικής και των Επικοινωνιών που θα επιτρέπουν την ασφαλή πρόσβαση των διάφορων μη εθνικών ευρωπαϊκών συστημάτων υγειονομικής περίθαλψης στις πληροφορίες αναφορικά με την υγεία του ασθενούς. Το epSOS είναι ένα έργο για την προώθηση της διαλειτουργικότητας της ηλεκτρονικής υγείας , το οποίο χρηματοδοτεί η Ευρωπαϊκή Ένωση και θέλει να χτίσει μια υποδομή υπηρεσιών, που θα επιτρέπει  τη διασυνοριακή διαλειτουργικότητα των συστημάτων ηλεκτρονικών μητρώων υγείας στην Ευρώπη, χωρίς να καταπατά όμως νομοθετικές ρυθμίσεις ή να υπερβαίνει τα ήδη υπάρχουσα εθνικά συστήματα. \cite{Dogac2012}
+	 	Η Ευρωπαϊκή Ένωση στα πλαίσια του στόχου της επικοινωνίας και της συνεργασίας των χωρών που εντάσσονται σε αυτή και την ύπαρξη κοινών οδηγιών στον τομέα της υγείας, τον Ιούλιο του 2008 σε συνεργασία με τους δημόσιους φορείς που έχουν αρμοδιότητα τις ηλεκτρονικές υπηρεσίες υγείας (ηλεκτρονικός ιατρικός φάκελος, ηλεκτρονικής συνταγογράφησης) ξεκίνησε ένα σημαντικό έργο, τον ευρωπαϊκό πιλότο epSOS (Έξυπνες Ανοιχτές Ηλεκτρονικές Υπηρεσίες για τους Ευρωπαίους Ασθενείς). Ο κύριος στόχος του epSOS είναι η ανάπτυξη ενός πρακτικού πλαισίου ηλεκτρονικής υγείας και κατάλληλων  υποδομών  στον τομέα της  Πληροφορικής και των Επικοινωνιών που θα επιτρέπουν την ασφαλή πρόσβαση των διάφορων μη εθνικών ευρωπαϊκών συστημάτων υγειονομικής περίθαλψης στις πληροφορίες αναφορικά με την υγεία του ασθενούς. Το epSOS είναι ένα έργο για την προώθηση της δια-λειτουργικότητας της ηλεκτρονικής υγείας , το οποίο χρηματοδοτεί η Ευρωπαϊκή Ένωση και θέλει να χτίσει μια υποδομή υπηρεσιών, που θα επιτρέπει  τη διασυνοριακή διαλειτουργικότητα των συστημάτων ηλεκτρονικών μητρώων υγείας στην Ευρώπη, χωρίς να καταπατά όμως νομοθετικές ρυθμίσεις ή να υπερβαίνει τα ήδη υπάρχουσα εθνικά συστήματα. \cite{Dogac2012}
 
 
-		Το epSOS αποτελείται από δύο χωριστές υπηρεσίες ηλεκτρονικής υγείας, τον ιατρικό φάκελο ασθενούς (patient medical record) και την ηλεκτρονική συνταγογράφηση (e-prescription),  για τις οποίες αναζητούνται διαλειτουργικές μέθοδοι στη διασυνοριακή επικοινωνία. Ειδικότερα, ο ιατρικός φάκελος ασθενούς  (patient medical record) στα πλαίσια του epSOS αποτελείται από στοιχεία τα οποία εμπεριέχουν γενικές πληροφορίες για τον ασθενή (π.χ. όνομα, ηλικία, γένος), σημαντικά κλινικά δεδομένα (π.χ. αλλεργίες, χρόνιες ασθένειες, χειρουργικές επεμβάσεις) , καθώς και τα τρέχοντα αλλά και παλαιότερα φαρμακευτικά σκευάσματα που λάμβανε. Ο φάκελος ασθενούς παρέχει τις βασικές πληροφορίες, οι οποίες βοηθούν τους επαγγελματίες του τομέα της υγείας να λάβουν σωστότερες και πιο ασφαλείς αποφάσεις σχετικά με την θεραπεία και τα φάρμακα που θα ακολουθήσουν οι ασθενείς. Οι πληροφορίες αυτές πρέπει να παρέχονται στην γλώσσα των εκάστοτε γιατρών, ώστε να μην προκύπτουν γλωσσικά εμπόδια. Η ηλεκτρονική συνταγογράφηση αφορά τη συνταγογράφηση των φαρμάκων με χρήση κατάλληλου λογισμικού και την ηλεκτρονική διαβίβασή τους. Στην ηλεκτρονική συνταγογράφηση η διαλειτουργικότητα μεταξύ των εθνικών συστημάτων είναι απαραίτητη όταν έχουμε έναν ασθενή ο οποίος χρειάζεται κάποιο φάρμακο, το οποίο έχει ήδη συνταγογραφηθεί σε κάποια άλλη χώρα.  Ο φαρμακοποιός θα πρέπει να αποκτήσει ηλεκτρονική πρόσβαση στη συνταγή, και όταν το φάρμακο αγοραστεί, το ηλεκτρονικό σύστημα θα πρέπει να ενημερώσει σχετικά με τα διανεμημένα φάρμακα το σύστημα υγειονομικής περίθαλψης της χώρας του ασθενούς. \cite{epSOS}
+		Το epSOS αποτελείται από δύο χωριστές υπηρεσίες ηλεκτρονικής υγείας, τον ιατρικό φάκελο ασθενούς (patient medical record) και την ηλεκτρονική συνταγογράφηση (e-prescription),  για τις οποίες αναζητούνται δια-λειτουργικές μέθοδοι στη διασυνοριακή επικοινωνία. Ειδικότερα, ο ιατρικός φάκελος ασθενούς  (patient medical record) στα πλαίσια του epSOS αποτελείται από στοιχεία τα οποία εμπεριέχουν γενικές πληροφορίες για τον ασθενή (π.χ. όνομα, ηλικία, γένος), σημαντικά κλινικά δεδομένα (π.χ. αλλεργίες, χρόνιες ασθένειες, χειρουργικές επεμβάσεις) , καθώς και τα τρέχοντα αλλά και παλαιότερα φαρμακευτικά σκευάσματα που λάμβανε. Ο φάκελος ασθενούς παρέχει τις βασικές πληροφορίες, οι οποίες βοηθούν τους επαγγελματίες του τομέα της υγείας να λάβουν σωστότερες και πιο ασφαλείς αποφάσεις σχετικά με την θεραπεία και τα φάρμακα που θα ακολουθήσουν οι ασθενείς. Οι πληροφορίες αυτές πρέπει να παρέχονται στην γλώσσα των εκάστοτε γιατρών, ώστε να μην προκύπτουν γλωσσικά εμπόδια. Η ηλεκτρονική συνταγογράφηση αφορά τη συνταγογράφηση των φαρμάκων με χρήση κατάλληλου λογισμικού και την ηλεκτρονική διαβίβασή τους. Στην ηλεκτρονική συνταγογράφηση η διαλειτουργικότητα μεταξύ των εθνικών συστημάτων είναι απαραίτητη όταν έχουμε έναν ασθενή ο οποίος χρειάζεται κάποιο φάρμακο, το οποίο έχει ήδη συνταγογραφηθεί σε κάποια άλλη χώρα.  Ο φαρμακοποιός θα πρέπει να αποκτήσει ηλεκτρονική πρόσβαση στη συνταγή, και όταν το φάρμακο αγοραστεί, το ηλεκτρονικό σύστημα θα πρέπει να ενημερώσει σχετικά με τα διανεμημένα φάρμακα το σύστημα υγειονομικής περίθαλψης της χώρας του ασθενούς. \cite{epSOS}
 		
-		 Το epSOS επιτυγχάνει την ασφαλή πρόσβαση των ασθενών σε πληροφορίες σχετικά με την υγεία τους για τα διάφορα ευρωπαϊκά συστήματα υγείας. Το σύστημα είναι φτιαγμένο για να εξυπηρετήσει έναν πολίτη της Ευρωπαϊκής Ένωσης  που ενώ είναι κατοικεί σε μια συγκεκριμένη χώρας δέχεται τακτικά υπηρεσίες υγείας σε μια άλλη χώρα εξαιτίας του καθώς εργάζεται σε αυτή τη χώρα ή βρίσκεται προσωρινά σε μία άλλη χώρα (π.χ. για τουρισμό ) και είναι ανάγκη να εκτελέσει μία ιατρική συνταγή της χώρας του ή χρειάζεται επείγουσα ιατρική περίθαλψη. Το epSOS παρέχει την κοινοτική οδηγία για τη διασυνοριακή ιατρική περίθαλψη, η οποία θα πρέπει να ενσωματωθεί στο εθνικό δίκαιο των κρατών μελών τα επόμενα χρόνια και επιπροσθέτως προτείνει τεχνικές λύσεις σε όλα τα επίπεδα διαλειτουργικότητας, όπως και σε θέματα πολιτικής και σε νομικά ζητήματα. επεκτείνεται πέρα από την έκδοση συστάσεων, μοντέλων οργάνωσης, και εργαλείων λογισμικού  στην  δοκιμή των αποτελέσματα αυτών μέσω πραγματικών πιλοτικών εφαρμογών σε πολλές ευρωπαϊκές περιφέρειες και χώρες.
+		 Το epSOS επιτυγχάνει την ασφαλή πρόσβαση των ασθενών σε πληροφορίες σχετικά με την υγεία τους για τα διάφορα ευρωπαϊκά συστήματα υγείας. Το σύστημα είναι φτιαγμένο για να εξυπηρετήσει έναν πολίτη της Ευρωπαϊκής Ένωσης  που ενώ είναι κατοικεί σε μια συγκεκριμένη χώρας δέχεται τακτικά υπηρεσίες υγείας σε μια άλλη χώρα εξαιτίας του καθώς εργάζεται σε αυτή τη χώρα ή βρίσκεται προσωρινά σε μία άλλη χώρα (π.χ. για τουρισμό ) και είναι ανάγκη να εκτελέσει μία ιατρική συνταγή της χώρας του ή χρειάζεται επείγουσα ιατρική περίθαλψη. Το epSOS παρέχει την κοινοτική οδηγία για τη διασυνοριακή ιατρική περίθαλψη, η οποία θα πρέπει να ενσωματωθεί στο εθνικό δίκαιο των κρατών μελών τα επόμενα χρόνια και επιπροσθέτως προτείνει τεχνικές λύσεις σε όλα τα επίπεδα δια-λειτουργικότητας, όπως και σε θέματα πολιτικής και σε νομικά ζητήματα. επεκτείνεται πέρα από την έκδοση συστάσεων, μοντέλων οργάνωσης, και εργαλείων λογισμικού  στην  δοκιμή των αποτελέσματα αυτών μέσω πραγματικών πιλοτικών εφαρμογών σε πολλές ευρωπαϊκές περιφέρειες και χώρες.
 		 
 
 
-\section{Υλοποίηση}
+\section{Eligibility as a Service}
+
+			\subsection{Motivation}
+			
+						
+			Η πρωταρχική ευθύνη της υπηρεσίας μετάγγισης αίματος είναι να παρέχει ένα ασφαλές και
+επαρκές απόθεμα αίματος και προϊόντων που παράγονται από το αίμα. Θα πρέπει να διασφαλίζεται ότι τα προϊόντα που προέρχονται από δωρεές αίματος παρουσιάζουν ελάχιστο κίνδυνο ύπαρξης οποιασδήποτε μόλυνσης, που θα μπορούσε να μεταδοθεί μέσω μετάγγισης. Όλοι οι υποψήφιοι αιμοδότες αξιολογούνται για την καταλληλότητά τους να δωρίσουν αίμα, σε κάθε περίπτωση δωρεάς. 
+		
+		Οι βασικές φάσεις ελέγχου του αίματος είναι οι εξής:
+		\begin{itemize}
+		\item	Φάση 1: Συμπλήρωση χειρόγραφου ερωτηματολογίου σχετικά με ιστορικό υγείας του ασθενούς.
+		\item Φάση 2: Εξέταση του εθελοντή αιμοδότη από ιατρό και βασικές εξετάσεις (μέτρηση πίεσης, έλεγχος αιμοσφαιρίνης) και ερωτήσεις σχετικά με το ιατρικό ιστορικό του αιμοδότη.
+		\item 	Φάση 3: Μετά την αιμοληψία, το αίμα περνάει μοριακούς και μικροβιολογικούς ελέγχους.
+		\end{itemize}		 
+		
+		Οι πληροφορίες που παρέχονται από 164 χώρες για την παγκόσμια Βάση Δεδομένων για την ασφάλεια αίματος δείχνουν ότι, συλλέγονται περισσότερες από 92 εκατομμύρια αιμοδοσίες ετησίως. Επιπλέον, τουλάχιστον 13 εκατομμύρια υποψήφιοι δότες απορρίπτονται πριν προλάβουν να φτάσουν στην αιμοληψία, δηλαδή στις φάσεις 1,2. \cite{safety} Οι λόγοι απόρριψης των φάσεων 1, 2 , τους οποίους θα εξετάσουμε στην παρούσα διπλωματική, έχουν να κάνουν με το ιατρικό ιστορικό του ασθενή (χρόνιες ασθένειες, αλλεργίες κ.λ.π.), με υπάρχουσες ιατρικές καταστάσεις (λοιμώξεις, λήψη αντιβίωσης, λήψη φαρμάκων που σε καθιστούν ακατάλληλο για  αιμοδοσία κ.λ.π.) και με καταστάσεις της προσωπικής ζωής του εθελοντή (π.χ. ομοφυλοφιλία). Το υπερβολικά μεγάλο ποσοστό απορρίψεων 14.13\% τονίζει την ανάγκη να μειωθεί ο αριθμός των περιπτώσεων της προσωρινής απόρριψης (με τον όρο προσωρινή απόρριψη, αναφερόμαστε σε προσωρινή αναβολή της αιμοδοσίας που συμβαίνει στις φάσεις 1, 2 λόγω προσωρινής ακαταλληλότητας των δοτών).
+
+		Το ποσοστό αυτό, γίνεται ιδιαίτερα σημαντικό και ζημιογόνο οικονομικά να κάνουμε μία ανάλυση των επιμέρους κοστών της αιμοδοσίας. Τα κόστη της αιμοδοσίας είναι ιδιαίτερα υψηλά. Θα παρουσιάσουμε την μέση τιμή αυτών των κοστών, όπως υπολογίσθηκε από το ελληνικό Υπουργείο Υγείας,το 2011.\cite{Fragoulakis} Στα κόστη περιλαμβάνεται το κόστος μηχανογράφησης (απογραφή και συντήρηση) των κέντρων αίματος, η τιμή των διαφόρων τύπων εξοπλισμού, το υπόλοιπο του κύκλου ζωής (που μετράται σε έτη) για τον ιατρικό εξοπλισμό. Επίσης, μετρώνται τα πάγια κόστη των μονάδων, τα οποία σχετίζονται με την ηλεκτρική ενέργεια,  τον καθαρισμό, την ασφάλεια, την διαχείριση, και όλες τις άλλες υποστηρικτικές υπηρεσίες που διατίθενται για τα κέντρα αίματος. Στον πίνακα \ref{tab:costs} αναφέρονται αναλυτικά τα κόστη, των φάσεων 1 και 2 για την συλλογή 1 μονάδας αίματος στην Ελλάδα.
+		
+		
+		%na ftiaksoume to table 
+		\begin{table}[H]
+	\centering
+	\begin{tabular}{l|}
+
+	\end{tabular}
+	\caption{Συνολικό κόστος για την συλλογή 1 μονάδας αίματος στην Ελλάδα.}
+	\label{tab:costs}
+\end{table}
+		
+		Παρατηρούμε ότι το συνολικό κόστος για είναι 98.07 € ανά μονάδα αίματος.  Με βάση το ποσοστό 14.13\%, σε μία γενική περίπτωση στις 100 αιμοδοσίες έχουμε 9,807 € έξοδα. Τα 1,385.73 €, είναι έξοδα για περιπτώσεις στις οποίες δεν θα πραγματοποιηθεί ποτέ αιμοληψία. Σε αυτό το σημείο πρέπει να τονίσουμε, ότι δεν έχουν συμπεριληφθεί όλα τα κόστη στην μελέτη μας, παρά μόνο τα απολύτως διακριτά και ξεκάθαρα μετρήσιμα.
+	
+		Πέραν του οικονομικού μέρους, μια άλλη πολύ σημαντική παράμετρος είναι η άσκοπη κατανάλωση χρόνου τόσο του ιατρικού προσωπικού του αιμοδοτικού κέντρου, όσο και των εθελοντών αιμοδοτών. Οι εθελοντές αιμοδότες καταναλώνουν αρκετό χρόνο για τον προγραμματισμό, την μετάβαση στο αιμοδοτικό κέντρο, την αναμονή και για την διαδικασία αιμοδοσίας.  Δεδομένου ότι το μεγαλύτερο ποσοστό είναι εργαζόμενοι, ο χρόνος αυτός είναι σημαντικός και είναι επιθυμητό να αποφευχθεί η περιττή ταλαιπωρία που προκύπτει για τους δωρητές λόγω προσωρινής τους απόρριψης. Η μείωση των περιπτώσεων προσωρινής απόρριψης, θα εξασφαλίσει μείωση της σπατάλης του χρόνου του προσωπικού.
+		
+		Μία επιπλέον πολύ σημαντική παράμετρος αποτελεί το ποσοστό επιστροφής των εθελοντών αιμοδοτών μετά από μία προσωρινή απόρριψη. Μελέτες έχουν δείξει ότι οι περισσότεροι εθελοντές δεν επιστρέφουν αν απορριφθούν μία φορά. Πιο συγκεκριμένα, ..... %να διαβασω papers 
+	
+		
+		
+		
+		
+		
 \section{Δοκιμές}
