Minor reference and label errors fix

--- a/references.bib
+++ b/references.bib
@@ -125,6 +125,17 @@
   Timestamp                = {2015.10.12}
 }
 
+@Electronic{angular-directives,
+  Title                    = {AngularJS: Conceptual Overview.},
+  Author                   = {AngularJS},
+  HowPublished             = {http://docs.angularjs.org/guide/},
+  Organization             = {AngularJS},
+  Url                      = {http://docs.angularjs.org/guide/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.09}
+}
+
 @Book{annuzziAndroid,
   Title                    = {Advanced Android Application Development},
   Author                   = {Joseph Annuzzi},
@@ -486,6 +497,17 @@
   Url                      = {http://dx.doi.org/10.1111/j.1537-2995.2010.02989.x}
 }
 
+@Electronic{images,
+  Title                    = {Cloud Models Images},
+  Author                   = {Dan},
+  HowPublished             = {http://www.techiestuffs.com/3-types-of-cloud-computing-services-for-businesses/},
+  Organization             = {TechieStuffs},
+  Url                      = {http://www.techiestuffs.com/3-types-of-cloud-computing-services-for-businesses/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.12}
+}
+
 @Article{danekCanadaCloud,
   Title                    = {Cloud Computing and the Canadian Environment},
   Author                   = {Danek},
@@ -566,7 +588,7 @@
 
 @Article{prescribingErrors,
   Title                    = {Characterization of prescribing errors in an internal medicine clinic.},
-  Author                   = {Devine EB, Wilson-Norton JL, Lawless NM, Hansen RN, Hazlet TK, Kelly K, Hollingworth W, Blough DK, Sullivan SD.},
+  Author                   = {Devine EB, Wilson-Norton JL, Lawless NM},
   Journal                  = {Am J Health Syst Pharm},
   Year                     = {2007 May},
 
@@ -732,15 +754,6 @@
   Timestamp                = {2015.09.29}
 }
 
-@Electronic{epSOS,
-  Title                    = {epSOS},
-  Author                   = {epSOS},
-  Url                      = {http://www.epsos.eu/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.16}
-}
-
 @Electronic{facebookApiCapabilities,
   Title                    = {Getting Started Android SDK},
   Author                   = {Facebook},
@@ -776,6 +789,7 @@
   Title                    = {The Cost of Blood Collection in Greece: An Economic Analysis},
   Author                   = {Fragoulakis, Vassilis and Stamoulis, Kostas and Grouzi, Elisabeth and Maniadakis, Nikolaos},
   Journal                  = {Clinical Therapeutics},
+  Year                     = {2014},
   Number                   = {7},
   Pages                    = {1028--1036.e5},
   Volume                   = {36},
@@ -801,9 +815,9 @@
 }
 
 @Article{pangalos,
-  Title                    = {The New Greek National E-Prescription System: A Powerful Ehealth
-Tool for Improving Services to Citizens and Administrative Control},
+  Title                    = {The New Greek National E-Prescription System: A Powerful Ehealth Tool for Improving Services to Citizens and Administrative Control},
   Author                   = {G. Pangalos , D. Asimakopoulos},
+  Journal                  = {New Horizons in Industry and Education},
   Year                     = {2013},
 
   Owner                    = {revekka},
@@ -1050,10 +1064,23 @@ Timothy Grance},
 @Electronic{IDIKA,
   Title                    = {IDIKA S.A.},
   Author                   = {IDIKA},
+  HowPublished             = {http://www.idika.gr},
+  Language                 = {Greek},
+  Organization             = {IDIKA},
   Url                      = {http://www.idika.gr},
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.15}
+}
+
+@Electronic{characteristics,
+  Title                    = {Cloud Characteristics},
+  Author                   = {Interoute},
+  Organization             = {Interoute},
+  Url                      = {http://www.interoute.com/cloud-article/},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.13}
 }
 
 @Article{BlohmIvo2013,
@@ -1379,7 +1406,8 @@ Timothy Grance},
 
 @Article{miller,
   Title                    = {Clinical decision support and electronic prescribing systems: a time for responsible thought and action},
-  Author                   = {Miller RA1, Gardner RM, Johnson KB, Hripcsak G.},
+  Author                   = {Miller RA1, Gardner RM, Johnson KB},
+  Journal                  = {Journal of the American Medical Informatics Association},
   Year                     = {2005 Jul-Aug},
 
   Owner                    = {revekka},
@@ -1539,6 +1567,17 @@ Division of health economics, Athens},
   Author                   = {Redmond, Eric and Wilson, Jim R},
   Publisher                = {Pragmatic Bookshelf},
   Year                     = {2012}
+}
+
+@Electronic{prescribing,
+  Title                    = {E-prescribing},
+  Author                   = {American College Of Rheumatology},
+  HowPublished             = {http://www.rheumatology.org/practice/office/hit/erx.asp},
+  Organization             = {American College Of Rheumatology},
+  Url                      = {http://www.rheumatology.org/practice/office/hit/erx.asp},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.15}
 }
 
 @Article{citeulike:382810,
@@ -1939,7 +1978,9 @@ URN: urn:nbn:de:0114-fqs0501297},
 @Electronic{ΚΕΕΛΠΝΟ2015,
   Title                    = {Ενημερωτικό Δελτίο},
   Author                   = {ΚΕ.ΕΛ.Π.ΝΟ.},
+  Language                 = {Greek},
   Month                    = {September},
+  Organization             = {ΚΕ.ΕΛ.Π.ΝΟ.},
   Year                     = {2015},
 
   Owner                    = {revekka},
@@ -1954,46 +1995,5 @@ URN: urn:nbn:de:0114-fqs0501297},
 
   Date-added               = {2015-10-03 18:43:55 +0000},
   Date-modified            = {2015-10-03 18:50:17 +0000}
-}
-
-@Electronic{angular-directives,
-  Title                    = {AngularJS: Conceptual Overview.},
-  HowPublished             = {http://docs.angularjs.org/guide/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.09}
-}
-
-@Electronic{characteristics,
-  Title                    = {Cloud Characteristics},
-  Url                      = {http://www.interoute.com/cloud-article/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.13}
-}
-
-@Electronic{idika,
-  Title                    = {ΗΔΙΚΑ},
-  Url                      = {http://www.idika.gr/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.15}
-}
-
-@Electronic{images,
-  Title                    = {Cloud Models Images},
-  Url                      = {http://www.techiestuffs.com/3-types-of-cloud-computing-services-for-businesses/},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.12}
-}
-
-@Electronic{prescribing,
-  Title                    = {E-prescribing},
-  HowPublished             = {American College Of Rheumatology},
-  Url                      = {http://www.rheumatology.org/practice/office/hit/erx.asp},
-
-  Owner                    = {revekka},
-  Timestamp                = {2015.10.15}
 }
 
