--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -132,7 +132,7 @@
 
 	    \end{tabular}
 	    \caption{Σενάριο χρήσης εγγραφής αιμοδότη}
-		\label{tab:blood_donor_register}
+		\label{tab:use_case_sample_table}
 	\end{center}
 \end{table}
  
